[build-system]
requires = ["setuptools >= 65.6.3", "numpy >= 1.23.5"]
build-backend = "setuptools.build_meta"

[project]
name = "pasp-plp"
dynamic = ["version"]
authors = [
  { name = "Renato Lui Geh", email = "renatogeh@gmail.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
description = "Probabilistic Answer Set Programming"
dependencies = [
  "clingo >= 5.6.2",
  "lark >= 1.1.5",
  "numpy >= 1.23.5",
]

[tool.setuptools.dynamic]
version = {attr = "pasp.__version__"}

[project.urls]
Repository = "https://github.com/RenatoGeh/pasp"
Issues = "https://github.com/RenatoGeh/pasp/issues"

[project.scripts]
pasp = "pasp.app:main"

