[build-system]
requires = ["setuptools >= 65.6.3", "numpy >= 1.23.5"]
build-backend = "setuptools.build_meta"

[project]
name = "pasp-plp"
dynamic = ["version", "dependencies"]
authors = [
  { name = "Renato Lui Geh", email = "renatogeh@gmail.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
description = "Probabilistic Answer Set Programming"

[project.optional-dependencies]
torch = ["torch >= 1.13.1"]

[tool.setuptools.dynamic]
version = {attr = "pasp.__version__"}
dependencies = {file = ["requirements.txt"]}

[project.urls]
Repository = "https://github.com/RenatoGeh/pasp"
Issues = "https://github.com/RenatoGeh/pasp/issues"

[project.scripts]
pasp = "pasp.app:main"

